# Dimep-Totem-Api

./: README.md  configuration.json  settings.json
api/: CMakeLists.txt
api/.ngrest/: services
api/api/: CMakeLists.txt
api/api/src/: api.cpp  api.h
api/auxiliar_fuctions/: Base64Handle.h  auxiliarHandlers.h
api/login/: CMakeLists.txt
api/login/src/: login.cpp  login.h  token.json  user.json
