cmake_minimum_required(VERSION 2.6)

project (login CXX)

set(LOGIN_HEADERS login.h)

set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(LOGIN_CODEGEN_DIR "${PROJECT_BINARY_DIR}/codegen")

PREPEND(LOGIN_HEADERS_PATHS ${PROJECT_SOURCE_DIR} ${LOGIN_HEADERS})

CODEGEN_FILES(LOGIN_CODEGEN_SOURCES ${LOGIN_CODEGEN_DIR} ${LOGIN_HEADERS})

add_custom_command(OUTPUT ${LOGIN_CODEGEN_SOURCES}
    COMMAND ${NGREST_BIN_PATH}ngrestcg -i "${PROJECT_SOURCE_DIR}" -o ${LOGIN_CODEGEN_DIR} -t service ${LOGIN_HEADERS}
    DEPENDS ${LOGIN_HEADERS_PATHS}
)

file(GLOB LOGIN_SOURCES ${PROJECT_SOURCE_DIR}/*.cpp)

list(APPEND LOGIN_SOURCES ${LOGIN_CODEGEN_SOURCES})

include_directories(${PROJECT_SOURCE_DIR} $ENV{NGREST_EXT_INCLUDES})

add_library(login MODULE ${LOGIN_SOURCES})

set_target_properties(login PROPERTIES PREFIX "")
set_target_properties(login PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SERVICES_DIR}"
)

target_link_libraries(login ngrestutils ngrestcommon ngrestjson ngrestengine $ENV{NGREST_EXT_LIBS})
